--- a/css/catagory.css
+++ b/css/catagory.css
@@ -79,15 +79,18 @@ label {
     text-align: center;
     margin: 10px;
     padding: 10px 10px;
-    color: #ffffff;
     font: 1.2em Arial,bold;
     border: 1px solid rgb(255, 255, 255);
     width: 300px;
     height:300px;
     border-radius: 10px 10px;
     box-shadow: 0 1px 0 1px black;
+    transition: .2s;
     
 
+}
+.card:hover{
+    background: rgb(9, 255, 234);
 }
 .about{
     width: 150px;
@@ -114,7 +117,7 @@ footer p{
 /*------------------- desktop version------------------- */
 @media only screen and (min-width: 768px) {
     body{
-        height: 100vh;
+    
     }
     
     label {
