--- a/css/mobil.css
+++ b/css/mobil.css
@@ -69,10 +69,16 @@ label {
 label i{
     color:#fff;
 }
+main{
+
+text-align: center;
+}
 .container{
     text-align: center;
     padding: 10px 5px;
     margin: 150px 10px;
+   
+  
 
    
 }
@@ -85,20 +91,23 @@ label i{
     color: #ffffff;
     font: 1.2em Arial,bold;
     border: 1px solid rgb(255, 255, 255);
-    width: 240px;
-    height:280px;
+    width:270px;
     border-radius: 10px 10px;
     box-shadow: 0 1px 0 1px black;
+    transition: .2s;
     
 
 }
+
+.card:hover{
+    background: rgb(30, 255, 0);
+}
 .about{
-    width: 100%;
-    height: 150px;
-    padding: 0 0;
-    border-radius: 10px 10p ;
-    margin-bottom: 0;
-   
+    margin: 10px 5px;
+    border-radius: 10px 10px;
+    box-shadow: 0 0 0 2px rgb(255, 255, 255);
+    width: 95%;
+    height: 200px;
 
 }
 .size{
@@ -108,7 +117,7 @@ label i{
     color: #fff;
 }
 .size i{
-    color: aqua;
+    color: rgb(255, 255, 255);
     font-size: 1.2em;
     margin-left: 10px;
 }
@@ -128,7 +137,7 @@ footer p{
 /*------------------- desktop version------------------- */
 @media only screen and (min-width: 768px) {
     body{
-        height: 100vh;
+       
     }
     
     label {
@@ -168,8 +177,6 @@ footer p{
         color: #fff;
         font: 1.5em Arial,bold;
         border: 1px solid rgb(255, 255, 255);
-        width: 300px;
-        height: 350px;
         border-radius: 10px 10px;
         box-shadow: 0 1px 0 1px black;
         
@@ -180,11 +187,7 @@ footer p{
     .card p {
         margin-top: 30px;
     }
-    .about{
-        width: 100px;
-        height: 100px;
-        object-fit: contain;
-    }
+  
   
 
 }
